--- a/compro_property_agensi_ocima/style.css
+++ b/compro_property_agensi_ocima/style.css
@@ -164,12 +164,12 @@ nav p {
 }
 
 .layanan {
-  margin-top: 60px;
+  margin-top: 100px;
   font-size: 25px;
   margin-bottom: 35px;
 }
 
-.buying_selling {
+.service-item_2 {
   text-align: center;
   align-items: center;
   width: 280px;
@@ -180,13 +180,17 @@ nav p {
   margin-bottom: 40px;
 }
 
-.layanan-item h3 {
+.service-item_2:hover {
+  box-shadow: 0px 6px 15px rgba(7, 40, 148, 0.3);
+}
+
+.service-item h3 {
   font-size: 25px;
   padding: 0px 5px 0px;
   margin: 0px;
   margin-top: 20px;
 }
-.buying_selling p {
+.service-item_2 p {
   padding: 0px 20px 0px;
   font-size: 15px;
 }
@@ -207,25 +211,51 @@ nav p {
   margin-top: 60px;
   font-size: 25px;
   margin-bottom: 35px;
+  padding-top: 100px;
 }
 
 .value_selling {
   text-align: center;
   align-items: center;
   width: 280px;
-  height: 300px;
+  height: 500px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   margin-bottom: 40px;
 }
 
-.value-item {
-  max-width: 350px;
-  padding: 15px;
+.value_selling img {
+  padding: 15px 0px 0px;
+  width: 88%;
+  transition: all 0.3s ease;
 }
 
-.value-item,
-.Properti_1 {
-  width: 100%;
+.value_selling:hover {
+  box-shadow: 0px 6px 15px rgba(7, 40, 148, 0.3);
+}
+
+.value_selling h3 {
+  font-size: 18px;
+  text-align: left;
+  padding-left: 30px;
+  margin-bottom: 0px;
+  color: rgb(54, 53, 53);
+}
+
+.value_selling h2 {
+  font-size: 23px;
+  text-align: left;
+  padding-left: 30px;
+  margin-top: 18px;
+  margin-bottom: 0px;
+  color: rgb(9, 87, 151);
+}
+
+.value_selling p {
+  text-align: left;
+  padding-left: 30px;
+  margin-top: 0px;
+  margin-top: 8px;
+  color: rgb(54, 53, 53);
 }
