--- a/compro_property_agensi_ocima/style.css
+++ b/compro_property_agensi_ocima/style.css
@@ -22,7 +22,7 @@ nav {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.nav_icon_rumah {
+.nav_home_icon {
   margin-left: 15px;
   margin-right: 10px;
   fill: white;
@@ -89,7 +89,6 @@ nav p {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
   top: 30px;
-  position: absolute;
   position: relative;
 }
 
@@ -225,8 +224,10 @@ nav p {
   margin-bottom: 40px;
 }
 
-.value_selling img {
-  padding: 15px 0px 0px;
+.value_selling .property_img {
+  display: block;
+  margin: 15px auto 0;
+  padding-top: 15px;
   width: 88%;
   transition: all 0.3s ease;
 }
@@ -244,7 +245,7 @@ nav p {
 }
 
 .value_selling h2 {
-  font-size: 23px;
+  font-size: 25px;
   text-align: left;
   padding-left: 30px;
   margin-top: 18px;
@@ -252,10 +253,25 @@ nav p {
   color: rgb(9, 87, 151);
 }
 
-.value_selling p {
-  text-align: left;
+.home_location {
+  display: flex;
+  align-items: center; /* ganti flex-start → center biar rata tengah */
+  justify-content: flex-start;
+  gap: 6px;
+  margin-top: 10px;
   padding-left: 30px;
-  margin-top: 0px;
-  margin-top: 8px;
-  color: rgb(54, 53, 53);
+}
+
+.home_location p {
+  margin: 0;
+  line-height: 1;
+  font-size: 15px;
+}
+
+.location_map {
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
+  display: inline-block;
+  vertical-align: middle;
 }
