--- a/compro_property_agensi_ocima/style.css
+++ b/compro_property_agensi_ocima/style.css
@@ -217,7 +217,7 @@ nav p {
   text-align: center;
   align-items: center;
   width: 280px;
-  height: 500px;
+  height: 540px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -239,7 +239,8 @@ nav p {
 .value_selling h3 {
   font-size: 18px;
   text-align: left;
-  padding-left: 30px;
+  margin-left: 30px;
+  margin-top: 25px;
   margin-bottom: 0px;
   color: rgb(54, 53, 53);
 }
@@ -248,7 +249,7 @@ nav p {
   font-size: 25px;
   text-align: left;
   padding-left: 30px;
-  margin-top: 18px;
+  margin-top: 15px;
   margin-bottom: 0px;
   color: rgb(9, 87, 151);
 }
@@ -274,4 +275,54 @@ nav p {
   flex-shrink: 0;
   display: inline-block;
   vertical-align: middle;
+}
+
+.point_icon {
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+  font-size: 13px;
+  margin-top: 12px;
+  margin-left: 30px;
+}
+
+.icon_item {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 4px;
+}
+.icon_item p {
+  text-align: right;
+  margin-top: 1px;
+}
+
+.icon_item .top {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.hubungi_sekarang {
+  width: 225px;
+  height: 40px;
+  margin: 25px auto 0px;
+  background-color: rgb(9, 87, 151);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+
+.hubungi_sekarang:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
+}
+
+.hubungi_sekarang_teks {
+  color: white;
+  text-decoration: none;
 }
