--- a/compro_property_agensi_ocima/style.css
+++ b/compro_property_agensi_ocima/style.css
@@ -93,13 +93,12 @@ nav p {
 
 /* Tentang Kami */
 .about {
-  margin: 60px 0 35px;
+  margin: 30px 0 30px;
 }
 .tentang_kami {
   text-align: center;
   font-size: 25px;
   color: rgb(54, 53, 53);
-  margin-top: 80px;
 }
 
 .visi_misi {
@@ -149,13 +148,14 @@ nav p {
 
 /* Layanan */
 .service-section {
-  margin: 60px 0 35px;
+  margin: 30px 0 30px;
+  background-color: rgb(9, 87, 151);
 }
 .layanan {
   text-align: center;
   font-size: 25px;
-  margin: 100px 0 35px;
-  color: rgb(54, 53, 53);
+  color: white;
+  padding: 30px 0px 30px;
 }
 
 .service-container {
@@ -163,6 +163,7 @@ nav p {
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
+  padding-bottom: 30px;
 }
 
 .service-item_2 {
@@ -304,13 +305,14 @@ nav p {
 /* Testimoni Klien */
 .testimonial-section {
   margin: 60px 0 35px;
+  background-color: rgb(9, 87, 151);
 }
 
 .testimonial-title {
   text-align: center;
   font-size: 25px;
-  color: rgb(54, 53, 53);
-  margin-bottom: 30px;
+  color: white;
+  padding: 30px 0px 30px;
 }
 
 .testimonial-container {
@@ -318,6 +320,7 @@ nav p {
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
+  padding-bottom: 30px;
 }
 
 .testimonial-item {
@@ -376,7 +379,10 @@ nav p {
 
 /* Contact */
 .contact {
-  margin: 60px 0 35px;
+  margin: 30px 0;
+  padding: 40px 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
 }
 
 .contact-title {
@@ -384,4 +390,58 @@ nav p {
   color: rgb(54, 53, 53);
   margin-bottom: 30px;
   font-size: 25px;
+  font-weight: 600;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-bottom: 30px;
+}
+
+form {
+  background: #fff;
+  padding: 25px 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  max-width: 450px;
+  width: 100%;
+}
+
+input,
+textarea {
+  background-color: #d3e0fa;
+  border: none;
+  border-radius: 8px;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+  font-size: 15px;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+  transition: all 0.2s ease;
+}
+
+input:focus,
+textarea:focus {
+  background-color: #c4d5ff;
+  box-shadow: 0 0 0 2px #9bb7ff;
+}
+
+button {
+  background-color: #007bff;
+  color: white;
+  padding: 12px 15px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  width: 100%;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #0056b3;
 }
