--- a/compro_property_agensi_ocima/style.css
+++ b/compro_property_agensi_ocima/style.css
@@ -1,4 +1,3 @@
-/* Reset & Global */
 * {
   margin: 0;
   padding: 0;
@@ -215,10 +214,6 @@ nav p {
   padding-bottom: 20px;
 }
 
-.value_selling:hover {
-  box-shadow: 0 6px 15px rgba(7, 40, 148, 0.3);
-}
-
 .value_selling .property_img {
   width: 88%;
   display: block;
@@ -324,12 +319,12 @@ nav p {
 }
 
 .testimonial-item {
-  width: 280px;
   background-color: white;
-  border-radius: 10px;
+  padding: 20px;
+  width: 250px;
+  border-radius: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
-  padding: 20px;
 }
 
 .testimonial-item:hover {
@@ -401,12 +396,17 @@ nav p {
 }
 
 form {
-  background: #fff;
+  background-color: white;
   padding: 25px 30px;
-  border-radius: 12px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   max-width: 450px;
   width: 100%;
+  transition: all 0.3s ease;
+}
+
+form:hover {
+  box-shadow: 0 6px 15px rgba(7, 40, 148, 0.3);
 }
 
 input,
@@ -444,4 +444,48 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+.contact-information-title {
+  color: #333;
+  font-size: 26px;
+  font-weight: 600;
+  margin-bottom: 25px;
+}
+
+.contact-information-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  padding: 10px 0px 10px;
+}
+
+.contact-information-item {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  width: 230px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.contact-information-item h3 {
+  color: #444;
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.contact-information-item span {
+  color: #666;
+  font-size: 16px;
+}
+
+.contact-information-item img {
+  width: 50px;
+  height: 50px;
+}
+
+/* footer */
+.footer {
+  background-color: #444;
+  margin: 30px 0px 0px;
 }
